# test-leptos-axum-ydx

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  README.md
.sqlx/: query-23fdf10fb101b7bc3361030ec4cb1191131415e56cbdb653f183dc05438aa909.json  query-2411fe5aa041706bac4e3c18126384f8d8807f9a33ca27eeecad366a8355b136.json  query-30b398f3f9c8752031d66abcb4f6a019bd2569351cbbc82b0de78be109226f0b.json  query-37cde157a72ed3ad70abab22b48703b7f237782a8c4b727a17e5c57e9089e99d.json  query-4d6687458af1b6c91825fef7b0ff9038dbffe2f32f45506d9d283495a7775719.json  query-56e5c0e25dde1625fec220068df6c6ae8787d7fb1a33b58f39451044b0154864.json  query-8a8a4c070f68a927c122b094f66f56e5872c4ec60a9e9e064bf5b0ce81f7972d.json  query-9c8a8eba8c49b129b9d0e351e26f812a80ad2ab4e72faa89e0af98b4eb05d6c0.json  query-b5802ad729283dd3001c33d64df97b4a696f56ce45a9cb69e477c715c54cee5a.json  query-d1fd980084b0dd4b79a55c2ebb6f98a8fb851b8e3330fadfe1def3704e53efdc.json  query-e151dfc9c1cad7131bc0c1ff4bcd9173a05ea514fd79f6d622692c093dc70d72.json  query-ef5312cf0e3888c583bad52722209cfb57532f81b99bbea9c995ca1640380e7a.json
app/: Cargo.toml
app/src/: calendar.rs  dashboard.rs  dropdown.rs  home.rs  lib.rs  loading.rs  login.rs  logout.rs  reports.rs  router.rs  users.rs
app/src/reports/: edit.rs  list.rs  mod.rs  summary.rs  viewer.rs
app/src/users/: dropdown.rs  edit.rs  list.rs  mod.rs
common/: Cargo.toml
common/.sqlx/: query-0c3daec4c2382e3dac4d2aefca8ca783e96a2537e89868db6c176ddddb391fbf.json  query-25a072a712f18b13e8494ae9f14b9535ad58a99e67946f988cd3af9391695d55.json  query-7b4c6924b3b9be90b5287c016be8fce0329fe4e1c0e158bc05d85cb2497cdea6.json  query-e069d5272b64b344adc9403505932d632d1b846ec36d3b931fc3e5f00b3156c3.json
common/migrations/: 1_create_entries.sql  2_create_users.sql  4_users_entries.sql
common/migrations/2024-03-26-212003_create_users/: up.sql
common/migrations/2024-03-27-121931_users_permissions/: up.sql
common/migrations/2024-03-27-125411_users_entries/: down.sql
common/src/: ctx.rs  lib.rs  migrations.rs  moneys.rs  perms.rs  schema.rs  user.rs
common/src/handlers/: get_report.rs  get_user.rs  list_dates.rs  list_reports.rs  list_users.rs  login.rs  logout.rs  mod.rs  new_report.rs  new_user.rs  update_report.rs  update_user.rs
common/src/models/: entry.rs  mod.rs  user.rs
frontend/src/: lib.rs
server/: Cargo.toml
server/migrations/2024-03-26-180322_create_entries/: up.sql
server/migrations/2024-03-26-212003_create_users/: up.sql
server/migrations/2024-03-27-121931_users_permissions/: up.sql
server/migrations/2024-03-27-125411_users_entries/: up.sql
server/src/: config.rs  fixture.rs  main.rs  models.rs  routes.rs  schema.rs  user.rs
server/src/handlers/: entries.rs
server/src/models/: entry.rs  mod.rs  user.rs
style/: main.scss  tailwind.config.js
