[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { workspace = true, features = ["macros"], optional = true }
axum_session = { version = "0.13.0", features = [
    "postgres-rustls",
], optional = true }
axum_session_auth = { version = "0.13.0", features = [
    "postgres-rustls",
], optional = true }
bcrypt = { version = "0.15.1", optional = true }
chrono = { version = "0.4.37", features = ["serde"] }
deadpool-diesel = { version = "0.5.0", features = [
    "serde",
    "postgres",
], optional = true }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = { version = "2.1.0", features = [
    "postgres",
], optional = true }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
log.workspace = true
rusty-money = { version = "0.4.1", features = ["iso"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
], optional = true }
uuid = { version = "1.8.0", features = ["serde"] }


[features]
ssr = [
    "leptos/ssr",
    "diesel/postgres_backend",
    "dep:leptos_axum",
    "dep:bcrypt",
    "dep:diesel_migrations",
    "dep:sqlx",
    "dep:deadpool-diesel",
    "dep:axum",
    "dep:axum_session",
    "dep:axum_session_auth",
]
