[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { workspace = true, features = ["macros"], optional = true }
axum_session = { version = "0.13.0", features = [
    "postgres-rustls",
], optional = true }
axum_session_auth = { version = "0.13.0", features = [
    "postgres-rustls",
], optional = true }
bcrypt = { version = "0.15.1", optional = true }
chrono = { version = "0.4.37", features = ["serde"] }
leptos = { workspace = true }
leptos_axum = { workspace = true, optional = true }
log.workspace = true
rusty-money = { version = "0.4.1", features = ["iso"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
    "macros",
], optional = true }
sqlx-postgres = { version = "0.7.4", features = [
    "chrono",
    "json",
    "migrate",
    "rust_decimal",
    "time",
    "uuid",
], optional = true }
uuid = { version = "1.8.0", features = ["serde"] }


[features]
ssr = [
    "leptos/ssr",
    "dep:leptos_axum",
    "dep:bcrypt",
    "dep:sqlx",
    "dep:sqlx-postgres",
    "dep:axum",
    "dep:axum_session",
    "dep:axum_session_auth",
]
