[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
dotenvy = "0.15"
deadpool-diesel = { version = "0.5.0", features = ["serde", "postgres"] }
axum = { workspace = true, features = ["macros"] }
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
axum_session = { version = "0.13.0", features = ["postgres-rustls"] }
axum_session_auth = { version = "0.13.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
anyhow = "1.0.81"
common = { path = "../common", features = ["ssr"] }
