[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
anyhow = "1.0.81"
axum = { workspace = true, features = ["macros"] }
axum_session = { version = "0.13.0", features = ["postgres-rustls"] }
axum_session_auth = { version = "0.13.0", features = ["postgres-rustls"] }
bcrypt = { version = "0.15.1" }
dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
deadpool-diesel = { version = "0.5.0", features = ["serde", "postgres"] }
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
log.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
common = { path = "../common", features = ["ssr"] }
